# Valoroster

./: .gitignore  README.md  api_caller.py  data_crawler.py  enums.py  game_data.py  main.py  postgres-db.yaml  pyproject.toml  tourny_scraper.py
test_io/: test_input.html  test_output.txt
