[tool.poetry]
name = "valcomps"
version = "0.1.0"
description = ""
authors = ["Bryan Yao <bryao@seas.upenn.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
